fix: footer overflow issue and logo

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -14,6 +14,36 @@
     display: none;
 }
 
+.custom-scroll-footer {
+    overflow-x: auto;
+
+    /* Firefox */
+    scrollbar-width: thin;
+    scrollbar-color: rgba(114, 114, 114, 0.2) transparent;
+}
+
+/* Chrome, Edge, Safari */
+.custom-scroll-footer::-webkit-scrollbar {
+    height: 3px;
+    /* very thin */
+}
+
+.custom-scroll-footer::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.custom-scroll-footer::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.2);
+    /* low visibility */
+    border-radius: 10px;
+}
+
+/* Remove arrows completely */
+.custom-scroll-footer::-webkit-scrollbar-button {
+    display: none;
+}
+
+
 @layer base {
 
     input:-webkit-autofill,
